log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:  
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-output-config
          configMap:
            name: log-output-config
      containers:
        - name: log-output
          image: temibonn/log-output:v3.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: log-output-config
              mountPath: /config
