log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: exercises
spec:
  rules:
    - http: 
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port: 
                  number: 3000
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port: 
                  number: 3001
